# AuricJson

./: .clang-format  CMakeLists.txt  auric_json.h  benchmark.cpp  main.cpp  tests.h
benchmark/: CMakeLists.txt  benchmark.cpp
tests/: CMakeLists.txt  tests.cpp
